--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     </div>
     <img id="banner" src="banner.jpg" alt="Banner" height="240">
     <h1>
-        About dharun 
+        About 
     </h1>
 
     <div id="about">
