--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
       DHARUN PREVIEW
     </title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="/src/icon.png"
+    <link rel="icon" type="image/x-icon" href="/src/preview.png"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
