--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     </div>
     <img id="banner" src="banner.jpg" alt="Banner" height="240">
     <h1>
-        About KNOTTY 
+        About KNOTTY  nnnn
     </h1>
 
     <div id="about">
